--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,17 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "APP_ID", APP_ID)
+            resValue("string", "APP_ID", APP_ID)
+            buildConfigField("String", "APP_KEY", APP_KEY)
+            resValue("string", "APP_KEY", APP_KEY)
+        }
+        debug {
+            testCoverageEnabled true
+            buildConfigField("String", "APP_ID", APP_ID)
+            resValue("string", "APP_ID", APP_ID)
+            buildConfigField("String", "APP_KEY", APP_KEY)
+            resValue("string", "APP_KEY", APP_KEY)
         }
     }
 }
@@ -30,7 +41,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -39,5 +50,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:21.4.0'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
 
-
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.7.1"
+    implementation "com.squareup.retrofit2:converter-gson:2.7.1"
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 }
