--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+APP_ID = "51eaaa60"
+APP_KEY = "0f59daf6f208eed367a57630cc36e1d9"
