--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,9 +16,13 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             buildConfigField("String", "APP_ID", APP_ID)
             resValue("string", "APP_ID", APP_ID)
@@ -31,6 +35,7 @@ android {
             resValue("string", "APP_ID", APP_ID)
             buildConfigField("String", "APP_KEY", APP_KEY)
             resValue("string", "APP_KEY", APP_KEY)
+            multiDexEnabled true
         }
     }
 }
@@ -54,4 +59,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.7.1"
     implementation "com.squareup.retrofit2:converter-gson:2.7.1"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+
+    // View Model
+    implementation "android.arch.lifecycle:extensions:1.1.1"
 }
