--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,10 @@ dependencies {
 
     // View Model
     implementation "android.arch.lifecycle:extensions:1.1.1"
+
+    //Navigation graph
+    def nav_version = "2.3.0-alpha01"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
 }
