--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,7 +78,7 @@ dependencies {
     implementation "com.mikepenz:fastadapter-extensions-expandable:$fastadapterVersion"
 
     //Glide
-    kapt "android.arch.lifecycle:compiler:1.1.1"
-    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    //kapt "android.arch.lifecycle:compiler:1.1.1"
+  //  kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
 }
