--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,6 @@ dependencies {
     implementation "com.mikepenz:fastadapter-extensions-expandable:$fastadapterVersion"
 
     //Glide
-    //kapt "android.arch.lifecycle:compiler:1.1.1"
-  //  kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation "com.github.bumptech.glide:glide:4.10.0"
 
 }
