--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,6 @@ dependencies {
     //Glide
     implementation "com.github.bumptech.glide:glide:4.10.0"
 
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
 }
