--- a/gradle.properties
+++ b/gradle.properties
@@ -19,5 +19,8 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-APP_ID = "51eaaa60"
-APP_KEY = "0f59daf6f208eed367a57630cc36e1d9"
+APP_ID_RECIPES = "51eaaa60"
+APP_KEY_RECIPES = "0f59daf6f208eed367a57630cc36e1d9"
+
+APP_ID_FOOD = "acaa5c6d"
+APP_KEY_FOOD = "4d0b336af3c5a2aba183a0502ada5450"
