--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,21 +15,20 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
-
         <meta-data
-        android:name="edanam.app_id"
+        android:name="edanam.app_id_recipes"
         android:value="s@string/APP_ID_RECIPES" />
 
         <meta-data
-            android:name="edanam.app_key"
+            android:name="edanam.app_key_recipes"
             android:value="@string/APP_KEY_RECIPES" />
 
         <meta-data
-            android:name="edanam.app_id"
+            android:name="edanam.app_id_food"
             android:value="s@string/APP_ID_FOOD" />
 
         <meta-data
-            android:name="edanam.app_key"
+            android:name="edanam.app_key_food"
             android:value="@string/APP_KEY_FOOD" />
 
         <activity android:name=".controller.activity.MainActivity">
