--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,10 +4,11 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'io.objectbox' // Apply last.
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29"
+    buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.inved.freezdge"
         minSdkVersion 19
@@ -65,8 +66,8 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
     //Firebase
-    implementation 'com.google.firebase:firebase-firestore:21.4.1'
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-firestore:21.4.2'
+    implementation 'com.google.firebase:firebase-auth:19.3.0'
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.7.1"
@@ -79,7 +80,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
 
     //Navigation graph
-    def nav_version = "2.3.0-alpha03"
+    def nav_version = "2.3.0-alpha04"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
