--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,13 @@
 
         <meta-data
             android:name="edanam.app_id_recipes"
-            android:value="s@string/APP_ID_RECIPES" />
+            android:value="@string/APP_ID_RECIPES" />
         <meta-data
             android:name="edanam.app_key_recipes"
             android:value="@string/APP_KEY_RECIPES" />
         <meta-data
             android:name="edanam.app_id_food"
-            android:value="s@string/APP_ID_FOOD" />
+            android:value="@string/APP_ID_FOOD" />
         <meta-data
             android:name="edanam.app_key_food"
             android:value="@string/APP_KEY_FOOD" />
