Create repository, model and view model for ingredients and favouritesRecipes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
-
         <meta-data
             android:name="edanam.app_id_recipes"
             android:value="@string/APP_ID_RECIPES" />
@@ -29,17 +28,17 @@
             android:name="edanam.app_key_food"
             android:value="@string/APP_KEY_FOOD" />
 
-        <activity android:name=".controller.activity.MainActivity">
+        <activity android:name=".uiGeneral.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".controller.activity.MyGroceryListActivity"></activity>
-        <activity android:name=".controller.activity.SearchIngredientsActivity"></activity>
-        <activity android:name=".controller.activity.BaseActivity"></activity>
-        <activity android:name=".controller.activity.WebviewActivity"></activity>
+        <activity android:name=".ingredientslist.ui.MyGroceryListActivity"></activity>
+        <activity android:name=".ingredientslist.ui.SearchIngredientsActivity"></activity>
+        <activity android:name=".uiGeneral.activity.BaseActivity"></activity>
+        <activity android:name=".recipes.ui.WebviewActivity"></activity>
 
     </application>
 
