--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,7 @@ dependencies {
 
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
+    //Lottie
+    implementation 'com.airbnb.android:lottie:3.3.1'
+
 }
