--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,4 +96,8 @@ dependencies {
     //Lottie
     implementation 'com.airbnb.android:lottie:3.3.1'
 
+    // Rx libs
+    implementation "io.reactivex.rxjava2:rxandroid:$rxJavaVersion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
+
 }
