Implementing Google connection for the moment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".uiGeneral.activity.BaseActivity"/>
         <activity android:name=".recipes.ui.WebviewActivity"/>
         <activity android:name=".recipes.ui.RecipeDetailActivity"/>
+        <activity android:name=".uiGeneral.activity.LoginActivity"/>
     </application>
 
 </manifest>
