--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     //Firebase
     implementation 'com.google.firebase:firebase-firestore:21.4.2'
     implementation 'com.google.firebase:firebase-auth:19.3.0'
+    implementation 'com.google.firebase:firebase-core:17.3.0'
+    implementation 'com.google.android.gms:play-services-auth:18.0.0'
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.7.1"
