FirestoreRecyclerAdapter to show post

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation 'com.google.firebase:firebase-core:17.3.0'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
+    implementation 'com.firebaseui:firebase-ui-firestore:5.0.0'
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.7.1"
