--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,14 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'io.objectbox' // Apply last.
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('/Users/alexandragnimadi/StudioProjects/Freezdge/Untitled')
+            storePassword '6ec7abg94'
+            keyPassword '6ec7abg94'
+            keyAlias = 'keyFreezdge'
+        }
+    }
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
     defaultConfig {
@@ -37,6 +45,8 @@ android {
             resValue("string", "APP_ID_FOOD", APP_ID_FOOD)
             buildConfigField("String", "APP_KEY_FOOD", APP_KEY_FOOD)
             resValue("string", "APP_KEY_FOOD", APP_KEY_FOOD)
+            debuggable = true
+            signingConfig signingConfigs.release
         }
         debug {
             testCoverageEnabled true
