--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'io.objectbox' // Apply last.
 
 android {
@@ -35,7 +36,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             buildConfigField("String", "APP_ID_RECIPES", APP_ID_RECIPES)
             resValue("string", "APP_ID_RECIPES", APP_ID_RECIPES)
@@ -46,6 +47,7 @@ android {
             buildConfigField("String", "APP_KEY_FOOD", APP_KEY_FOOD)
             resValue("string", "APP_KEY_FOOD", APP_KEY_FOOD)
             debuggable = true
+            multiDexEnabled true
             signingConfig signingConfigs.release
         }
         debug {
@@ -112,7 +114,9 @@ dependencies {
     //Lottie
     implementation 'com.airbnb.android:lottie:3.3.1'
 
-
+    //Crashlytics
+    implementation 'com.google.firebase:firebase-analytics:17.4.0'
+    implementation 'com.google.firebase:firebase-crashlytics:17.0.0'
 
     // Permission dispatcher
     implementation "org.permissionsdispatcher:permissionsdispatcher:$dispatcher"
