--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,7 @@ apply plugin: 'io.objectbox' // Apply last.
 
 android {
     signingConfigs {
-        release {
-            storeFile file('/Users/alexandragnimadi/StudioProjects/Freezdge/Untitled')
-            storePassword '6ec7abg94'
-            keyPassword '6ec7abg94'
-            keyAlias = 'keyFreezdge'
-        }
+        release
     }
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -38,31 +33,39 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField("String", "APP_ID_RECIPES", APP_ID_RECIPES)
-            resValue("string", "APP_ID_RECIPES", APP_ID_RECIPES)
-            buildConfigField("String", "APP_KEY_RECIPES", APP_KEY_RECIPES)
-            resValue("string", "APP_KEY_RECIPES", APP_KEY_RECIPES)
-            buildConfigField("String", "APP_ID_FOOD", APP_ID_FOOD)
-            resValue("string", "APP_ID_FOOD", APP_ID_FOOD)
-            buildConfigField("String", "APP_KEY_FOOD", APP_KEY_FOOD)
-            resValue("string", "APP_KEY_FOOD", APP_KEY_FOOD)
+            buildConfigField"String", "APP_ID_RECIPES", APP_ID_RECIPES
+            buildConfigField"String", "APP_KEY_RECIPES", APP_KEY_RECIPES
             debuggable = true
             multiDexEnabled true
             signingConfig signingConfigs.release
         }
         debug {
             testCoverageEnabled true
-            buildConfigField("String", "APP_ID_RECIPES", APP_ID_RECIPES)
-            resValue("string", "APP_ID_RECIPES", APP_ID_RECIPES)
-            buildConfigField("String", "APP_KEY_RECIPES", APP_KEY_RECIPES)
-            resValue("string", "APP_KEY_RECIPES", APP_KEY_RECIPES)
-            buildConfigField("String", "APP_ID_FOOD", APP_ID_FOOD)
-            resValue("string", "APP_ID_FOOD", APP_ID_FOOD)
-            buildConfigField("String", "APP_KEY_FOOD", APP_KEY_FOOD)
-            resValue("string", "APP_KEY_FOOD", APP_KEY_FOOD)
+            buildConfigField"String", "APP_ID_RECIPES", APP_ID_RECIPES
+            buildConfigField"String", "APP_KEY_RECIPES", APP_KEY_RECIPES
             multiDexEnabled true
         }
     }
+}
+
+def Properties props = new Properties()
+def propFile = new File('signing.properties')
+if (propFile.canRead()){
+    props.load(new FileInputStream(propFile))
+
+    if (props!=null && props.containsKey('STORE_FILE') && props.containsKey('STORE_PASSWORD') &&
+            props.containsKey('KEY_ALIAS') && props.containsKey('KEY_PASSWORD')) {
+        android.signingConfigs.release.storeFile = file(props['STORE_FILE'])
+        android.signingConfigs.release.storePassword = props['STORE_PASSWORD']
+        android.signingConfigs.release.keyAlias = props['KEY_ALIAS']
+        android.signingConfigs.release.keyPassword = props['KEY_PASSWORD']
+    } else {
+        println 'signing.properties found but some entries are missing'
+        android.buildTypes.release.signingConfig = null
+    }
+}else {
+    println 'signing.properties not found'
+    android.buildTypes.release.signingConfig = null
 }
 
 dependencies {
