--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,14 @@ apply plugin: 'io.objectbox' // Apply last.
 
 android {
     signingConfigs {
-        release
+        release {
+            Properties localProps = new Properties()
+            localProps.load(new FileInputStream(new File('signin.properties')))
+            storeFile file(localProps["store"])
+            keyAlias localProps["alias"]
+            storePassword localProps["storePass"]
+            keyPassword localProps["pass"]
+        }
     }
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -48,25 +55,7 @@ android {
     }
 }
 
-def Properties props = new Properties()
-def propFile = new File('signin.properties')
-if (propFile.canRead()){
-    props.load(new FileInputStream(propFile))
 
-    if (props!=null && props.containsKey('STORE_FILE') && props.containsKey('STORE_PASSWORD') &&
-            props.containsKey('KEY_ALIAS') && props.containsKey('KEY_PASSWORD')) {
-        android.signingConfigs.release.storeFile = file(props['STORE_FILE'])
-        android.signingConfigs.release.storePassword = props['STORE_PASSWORD']
-        android.signingConfigs.release.keyAlias = props['KEY_ALIAS']
-        android.signingConfigs.release.keyPassword = props['KEY_PASSWORD']
-    } else {
-        println 'signing.properties found but some entries are missing'
-        android.buildTypes.release.signingConfig = null
-    }
-}else {
-    println 'signing.properties not found'
-    android.buildTypes.release.signingConfig = null
-}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
