--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,9 +40,9 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField"String", "APP_ID_RECIPES", APP_ID_RECIPES
-            buildConfigField"String", "APP_KEY_RECIPES", APP_KEY_RECIPES
-            debuggable = true
+            buildConfigField("String", "APP_ID_RECIPES", APP_ID_RECIPES)
+            buildConfigField("String", "APP_KEY_RECIPES", APP_KEY_RECIPES)
+            debuggable = false
             multiDexEnabled true
             signingConfig signingConfigs.release
         }
