--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,6 @@ android {
             buildConfigField("String", "APP_KEY_RECIPES", APP_KEY_RECIPES)
             debuggable = false
             multiDexEnabled= true
-            shrinkResources= false // Remove unused resources
-            useProguard= false     // Remove unused codes
             signingConfig signingConfigs.release
         }
         debug {
@@ -60,7 +58,6 @@ android {
             multiDexEnabled= true
             minifyEnabled =false
             shrinkResources =false
-            useProguard= false
             debuggable= true
         }
     }
@@ -80,7 +77,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
-    testImplementation 'org.mockito:mockito-core:2.23.4'
+    testImplementation "io.mockk:mockk:$mock_version"
     testImplementation 'org.robolectric:robolectric:4.3.1'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     implementation "androidx.viewpager2:viewpager2:1.0.0"
