--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ allprojects {
         androidX = "3.3.1"
         excludeAppGlideModule = true
         dispatcher="4.7.0"
+        mock_version="1.10.0"
 
     }
 
