--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-android.enableR8=true
+android.enableD8=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 APP_ID_RECIPES = "51eaaa60"
