--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,8 +122,9 @@ dependencies {
 
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
-    //Lottie
+    //Lottie and Like button
     implementation 'com.airbnb.android:lottie:3.3.1'
+    implementation  'com.github.jd-alexander:LikeButton:0.2.3'
 
     //Crashlytics
     implementation 'com.google.firebase:firebase-crashlytics:17.0.0'
