Fix bug when we launch test with coverage (objectox tests failed before, but now it's ok with robolectric in all test classes)

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ allprojects {
         androidX = "3.3.1"
         excludeAppGlideModule = true
         dispatcher="4.7.0"
+        objectboxVersion = "2.5.1"
 
     }
 
