--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,7 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.2.0'
     testImplementation 'org.robolectric:robolectric:4.3.1'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "io.objectbox:objectbox-windows:$objectboxVersion"
 
 
     //Firebase
