feature : add viewbinding

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
+    viewBinding {
+        enabled = true
+    }
     testOptions {
         unitTests {
             includeAndroidResources = true
